<resources>
    <string name="app_name">Aisle Assignment</string>

    <string name="get_otp">Get OTP</string>
    <string name="enter_your_">Enter Your\nPhone Number</string>
    <string name="enter_the_otp">Enter The\nOTP</string>
    <string name="continue_">Continue</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="personal_me">Personal messages to you</string>
    <string name="notes">Notes</string>

    <string name="upgrade">Upgrade</string>
    <string name="interested_">Interested In You</string>
    <string name="premium_mem">Premium members can\nview all their likes at once\u00E2\u0080\u00A8</string>
    <string name="meena_23">Meena, 23</string>
    <string name="tap_to_revi">Tap to review 50+ notes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="discover">Discover</string>
    <string name="notes_">Notes</string>
    <string name="matches">Matches</string>
    <string name="profile">Profile</string>

</resources>